# tg-mcp-spy

./: .gitignore  .mcp.json  .pre-commit-config.yaml  2026-07-20-205443-local-command-caveatcaveat-the-messages-below.txt  CLAUDE.md  Makefile  README.md  pyproject.toml  tree.txt
.claude/: settings.json
.claude/agents/: architect.md  coder.md  doc-writer.md  explorer.md  orchestrator-main.md  reviewer.md  tester.md
.claude/hooks/: block-dangerous-commands.sh  format-and-check.sh  git-push-reminder.sh  inject-git-context.sh  log-stop.sh  protect-files.sh
.claude/rules/: api-design.md  change-discipline.md  database.md  dependencies.md  documentation.md  error-handling.md  git-workflow.md  logging.md  performance.md  python-style.md  repository-map.md  security.md  testing.md  typing.md
.claude/skills/api-integrator/: SKILL.md
.claude/skills/archive-change/: SKILL.md
.claude/skills/deploy-compose/: SKILL.md
.claude/skills/draft-adr/: SKILL.md
.claude/skills/explore-codebase/: SKILL.md
.claude/skills/git-automation/: SKILL.md
.claude/skills/implement-feature-slice/: SKILL.md
.claude/skills/propose-change/: SKILL.md
.claude/skills/refactor-small-safe/: SKILL.md
.claude/skills/review-diff/: SKILL.md
.claude/skills/start-task/: SKILL.md
docs/: chat.txt
openspec/: project.md
openspec/changes/channel-post-cache/: tasks.md
src/package_tgmcpspy/: __init__.py  config.py  db.py  models.py  obtain_session.py  server.py  telegram.py
tests/: conftest.py  test_config.py  test_db.py  test_server.py  test_smoke.py  test_telegram.py
(+17 files in other folders)
