[project]
name = "tg-mcp-spy"
version = "0.1.0"
description = "Telegram MCP Spy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.28.1",
    "uvicorn>=0.30.0",
    "telethon>=1.35.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.16",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
]

[project.scripts]
tg-mcp-spy = "package_tgmcpspy.server:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "N",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
warn_return_any = true
no_implicit_optional = true
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
show_error_codes = true
strict_equality = true
pretty = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
